more vertical spacing fix

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -44,7 +44,7 @@ h1 {
     float:left;
     text-align: center;
     cursor: default;
-    line-height:44px;
+    line-height:40px;
 }
 
 #nav-bg {
@@ -59,7 +59,7 @@ h1 {
     float:left;
     text-align: center;
     transition: background-color .5s;
-    line-height:44px;
+    line-height:40px;
 }
 
 #nav-bg:hover {
